# async

./: CMakeLists.txt  README.md  vix.json
.github/workflows/: async-strict-ci.yml
cmake/: AsyncOptions.cmake  AsyncSanitizers.cmake  AsyncWarnings.cmake  asyncConfig.cmake.in
examples/: CMakeLists.txt  when_all_any.cpp
include/cnerium/: version.hpp
include/cnerium/core/: cancel.hpp  error.hpp  io_context.hpp  scheduler.hpp  signal.hpp  spawn.hpp  task.hpp  thread_pool.hpp  timer.hpp  when.hpp
include/cnerium/detail/: asserts.hpp
include/cnerium/net/: dns.hpp  tcp.hpp  udp.hpp
include/vix/async/: async.hpp  version.hpp
include/vix/async/core/: cancel.hpp  error.hpp  io_context.hpp  scheduler.hpp  signal.hpp  spawn.hpp  task.hpp  thread_pool.hpp  timer.hpp  when.hpp
include/vix/async/detail/: asserts.hpp  config.hpp  log.hpp  platform.hpp  traits.hpp
include/vix/async/net/: asio_net_service.hpp  dns.hpp  tcp.hpp  udp.hpp
src/core/: io_context.cpp  scheduler.cpp  signal.cpp  thread_pool.cpp  timer.cpp
src/net/: asio_await.hpp  asio_dns.cpp  asio_net_service.cpp  asio_net_service.hpp  asio_tcp.cpp  asio_udp.cpp
tests/: CMakeLists.txt
tests/core/: cancel_smoke_test.cpp  scheduler_smoke_test.cpp  task_smoke_test.cpp  when_smoke_test.cpp
